Полное обновление: добавлен ProgressManager, GitHub Pages версия, исправлены все страницы

--- a/github-pages/.env
+++ b/github-pages/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=YOUR_BOT_TOKEN
-WEBAPP_URL=https://roszex.github.io/EmelyanovTGBot-webapp/page_1/index.html 
+BOT_TOKEN=7419984191:AAEPrT3p1yP7cL5ao5SUQcRsdCxj8F07Fwo
+WEBAPP_URL=https://roszex.github.io/EmelyanovTGBot-webapp/webapp/page_1/index.html
