--- a/local_ngrok/.env
+++ b/local_ngrok/.env
@@ -1,2 +1,2 @@
 BOT_TOKEN=7419984191:AAEPrT3p1yP7cL5ao5SUQcRsdCxj8F07Fwo
-WEBAPP_URL=https://8d85-147-45-179-150.ngrok-free.app/page_1/index.html 
+WEBAPP_URL=https://1cfb-147-45-179-150.ngrok-free.app/page_1/index.html
