--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 BOT_TOKEN=8002766154:AAGmNMTTDizV47jGrfCYw6XUL2Yhdz0EHdc
-WEBAPP_URL=
+WEBAPP_URL=https://roszex.github.io/TLGTester/webapp/page_1/index.html
