Упрощены уведомления админу, добавлен скрипт просмотра лидов и README для Beget

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BOT_TOKEN=8002766154:AAGmNMTTDizV47jGrfCYw6XUL2Yhdz0EHdc
 WEBAPP_URL=https://roszex.github.io/TLGTester/webapp/page_1/index.html
+ADMIN_ID=764903391
